PDF type has to be A-a1

--- a/README
+++ b/README
@@ -27,7 +27,7 @@ Workflow:
 # Edit each chapter as a file chnn.txt
 # run ./build in produce
 # this produces ODF, HTML, MD files
-# for printable PDF, load ODF in LibreOffice and save as PDF
+# for printable PDF, load ODF in LibreOffice and save as PDF/A-a1.
 
 For an index, set the INDEX variable in the .book file to a file
 (index.txt is an example) containing one keyword per line. To 
