Added note on model file to README

--- a/README
+++ b/README
@@ -22,7 +22,7 @@ Required Linux packages:
 - pygmentize
 - Perl Tree::Trie
 
-Workflow:
+## Workflow
 
 # Edit each chapter as a file chnn.txt
 # run ./build in produce
@@ -43,6 +43,12 @@ templates. There are a few symbols known to the mkodt script: FILENAME,
 INDEX, BREAKS, INSIDE, OUTSIDE, HRIGHT. The others are only known to the
 templates.
 
+## Model Document
+
 To check/modify the ODT templates, you have to know how to expand an ODT
 file using unzip, then you can copy/paste code from the various ODT sub
 files into the templates.
+
+The model directory contains a model.odt that you can use for this purpose.
+
+
